docs/0.0.0.0/_sources/gallery/extras/flow_cell_profiles.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/flow_cell_profiles.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_flow_cell_profiles.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_flow_cell_profiles.py:


Flow Cell geometries
====================

.. GENERATED FROM PYTHON SOURCE LINES 6-20

.. code-block:: Python

    from FlowCyPy import units
    from FlowCyPy.flow_cell import FlowCell

    # Create example FlowCell instances
    volume_flow = 0.3 * units.microliter / units.second
    focusing_factor = 0.5

    flow_cell = FlowCell(
        sample_volume_flow=0.02 * units.microliter / units.second,        # Flow speed: 10 microliter per second
        sheath_volume_flow=0.1 * units.microliter / units.second,        # Flow speed: 10 microliter per second
        width=20 * units.micrometer,        # Flow area: 10 x 10 micrometers
        height=10 * units.micrometer,        # Flow area: 10 x 10 micrometers
    )








.. GENERATED FROM PYTHON SOURCE LINES 21-22

Plot velocity profile for SquareFlowCell

.. GENERATED FROM PYTHON SOURCE LINES 22-24

.. code-block:: Python

    flow_cell.plot(n_samples=300)




.. image-sg:: /gallery/extras/images/sphx_glr_flow_cell_profiles_001.png
   :alt: Particle Spatial Distribution and Speed
   :srcset: /gallery/extras/images/sphx_glr_flow_cell_profiles_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: title={'center': 'Particle Spatial Distribution and Speed'}, xlabel='X [µm]', ylabel='Y [µm]'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.373 seconds)


.. _sphx_glr_download_gallery_extras_flow_cell_profiles.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: flow_cell_profiles.ipynb <flow_cell_profiles.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: flow_cell_profiles.py <flow_cell_profiles.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: flow_cell_profiles.zip <flow_cell_profiles.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
