docs/v0.9.3/_sources/gallery/extras/flow_cell_profiles.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/flow_cell_profiles.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_flow_cell_profiles.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_flow_cell_profiles.py:


Flow Cell geometries
====================

.. GENERATED FROM PYTHON SOURCE LINES 6-35

.. code-block:: Python

    from FlowCyPy import units
    from FlowCyPy.flow_cell import CircularFlowCell, RectangularFlowCell, SquareFlowCell

    # Create example FlowCell instances
    volume_flow = 0.3 * units.microliter / units.second
    focusing_factor = 0.5

    # CircularFlowCell instance
    circular_cell = CircularFlowCell(
        volume_flow=volume_flow,
        radius=10 * units.micrometer,
        focusing_factor=focusing_factor
    )

    # RectangularFlowCell instance with width 20 μm and height 10 μm.
    rectangular_cell = RectangularFlowCell(
        volume_flow=volume_flow,
        width=20 * units.micrometer,
        height=10 * units.micrometer,
        focusing_factor=focusing_factor
    )

    # SquareFlowCell instance
    square_cell = SquareFlowCell(
        volume_flow=volume_flow,
        side=3 * units.micrometer,
        focusing_factor=focusing_factor
    )








.. GENERATED FROM PYTHON SOURCE LINES 36-37

Plot velocity profile for CircularFlowCell

.. GENERATED FROM PYTHON SOURCE LINES 37-39

.. code-block:: Python

    circular_cell.plot_transverse_distribution(n_samples=300)




.. image-sg:: /gallery/extras/images/sphx_glr_flow_cell_profiles_001.png
   :alt: 3D Visualization of Particle Positions and Velocities in Rectangular Flow Cell
   :srcset: /gallery/extras/images/sphx_glr_flow_cell_profiles_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.11/x64/lib/python3.11/site-packages/matplotlib/cbook.py:967: UnitStrippedWarning: The unit of the quantity is stripped when downcasting to ndarray.
      x = np.asarray(x)

    <Axes3D: title={'center': '3D Visualization of Particle Positions and Velocities in Rectangular Flow Cell'}, xlabel='x [µm]', ylabel='y [µm]', zlabel='Velocity [m/s]'>



.. GENERATED FROM PYTHON SOURCE LINES 40-41

Plot velocity profile for RectangularFlowCell

.. GENERATED FROM PYTHON SOURCE LINES 41-43

.. code-block:: Python

    rectangular_cell.plot_transverse_distribution(n_samples=300)




.. image-sg:: /gallery/extras/images/sphx_glr_flow_cell_profiles_002.png
   :alt: 3D Visualization of Particle Positions and Velocities in Rectangular Flow Cell
   :srcset: /gallery/extras/images/sphx_glr_flow_cell_profiles_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.11/x64/lib/python3.11/site-packages/matplotlib/cbook.py:967: UnitStrippedWarning: The unit of the quantity is stripped when downcasting to ndarray.
      x = np.asarray(x)

    <Axes3D: title={'center': '3D Visualization of Particle Positions and Velocities in Rectangular Flow Cell'}, xlabel='x [µm]', ylabel='y [µm]', zlabel='Velocity [m/s]'>



.. GENERATED FROM PYTHON SOURCE LINES 44-45

Plot velocity profile for SquareFlowCell

.. GENERATED FROM PYTHON SOURCE LINES 45-47

.. code-block:: Python

    square_cell.plot_transverse_distribution(n_samples=300)




.. image-sg:: /gallery/extras/images/sphx_glr_flow_cell_profiles_003.png
   :alt: 3D Visualization of Particle Positions and Velocities in Rectangular Flow Cell
   :srcset: /gallery/extras/images/sphx_glr_flow_cell_profiles_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.11/x64/lib/python3.11/site-packages/matplotlib/cbook.py:967: UnitStrippedWarning: The unit of the quantity is stripped when downcasting to ndarray.
      x = np.asarray(x)

    <Axes3D: title={'center': '3D Visualization of Particle Positions and Velocities in Rectangular Flow Cell'}, xlabel='x [µm]', ylabel='y [µm]', zlabel='Velocity [m/s]'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.413 seconds)


.. _sphx_glr_download_gallery_extras_flow_cell_profiles.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: flow_cell_profiles.ipynb <flow_cell_profiles.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: flow_cell_profiles.py <flow_cell_profiles.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: flow_cell_profiles.zip <flow_cell_profiles.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
